# workshop-python-poetry-rust

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.bash
.github/workflows/: deploy.yml
python-rust-book/: book.toml
python-rust-book/src/: SUMMARY.md  introduction.md  prerequisites.md
python-rust-book/src/appendix/: 01_poetry_commands.md  02_maturin_commands.md  03_python_extensions.md
python-rust-book/src/application_development/: 00_application_development.md  01_rust_bindings_for_python.md  02_python_api_service.md  03_start_api_service.md
python-rust-book/src/containerization/: 00_containerization.md  00_dockerignore.md  01_dockerfile.md  02_docker_compose.md  03_building_and_running_the_docker_container.md
python-rust-book/src/project_setup/: 00_project_setup.md  01_create_new_project_with_poetry.md  02_install_python_using_pyenv.md  03_create_new_virtual_environment.md  04_add_python_dependencies.md  05_create_rust_extension.md
rust-pidigits/: Cargo.toml
rust-pidigits/src/: chudnovsky.rs  lib.rs
src/pi_api/: main.py
